--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
           <li class="header__lang-link">En</li>
         </ul>
       </nav>
+      <section class="lead">
+        <h1 class="lead__title">Путешествия<br>по России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках<br>новостей, а здесь.</p>
+        <img src="/images/lead-polka.jpg" alt="" class="lead__image">
+        <p class="lead__caption">ваша полка — верхняя</p>
+      </section>
     </div>
   </body>
 </html>
