--- a/index.html
+++ b/index.html
@@ -10,17 +10,45 @@
     <div class="page">
       <nav class="header">
         <div class="header__logo"></div>
-        <ul class="header__lang-links">
-          <li class="header__lang-link">Ru</li>
-          <li class="header__lang-link">En</li>
+        <ul class="header__lang">
+          <li class="header__lang-list">
+            <a class="header__lang-link header__lang-link_active" href="/">Ru</a>
+          </li>
+          <li class="header__lang-list">
+            <a class="header__lang-link" href="#">En</a>
+          </li>
         </ul>
       </nav>
       <section class="lead">
-        <h1 class="lead__title">Путешествия<br>по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках<br>новостей, а здесь.</p>
-        <img src="./images/lead-polka.jpg" alt="" class="lead__image">
+        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+        <p class="lead__subtitle">
+          Настоящая страна не в выпусках новостей,&nbsp;а здесь.
+        </p>
+        <img src="./images/lead-polka.jpg" alt="" class="lead__image" />
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
+      <section class="intro">
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <p class="intro__text">
+          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
+          36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома,
+          не видели? На самом деле, Россия — это целая вселенная с ласковым
+          морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
+          увидеть все эти красоты можно без миллионов на счету, загранпаспорта и
+          многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
+          мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и
+          проехала 20 тысяч километров по родной стране. Мы выбрали и описали
+          некоторые интересные места, достойные вашего отпуска.
+        </p>
+        <ul class="intro__list">
+          <li><span class="intro__list_bold">Часовых поясов</span> 11</li>
+          <li><span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+          <li><span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+          <li><span class="intro__list_bold">Природных заповедников</span> 105</li>
+          <li><span class="intro__list_bold">Аэропортов</span> 241</li>
+        </ul>
+      </section>
+
     </div>
   </body>
 </html>
