Добавил блок Photo-Grid

--- a/index.html
+++ b/index.html
@@ -48,7 +48,20 @@
           <li><span class="intro__list_bold">Аэропортов</span> 241</li>
         </ul>
       </section>
-
+      <section class="photo-grid">
+        <div class="photo-grid__item photo-grid__item_train"></div>
+        <div class="photo-grid__item photo-grid__item_atharva-tulsi"></div>
+        <div class="photo-grid__item photo-grid__item_tuman"></div>
+        <div class="photo-grid__item photo-grid__item_sochi"></div>
+        <div class="photo-grid__item photo-grid__item_arisa"></div>
+        <div class="photo-grid__item photo-grid__item_baikal"></div>
+        <div class="photo-grid__item photo-grid__item_elbrus"></div>
+        <div class="photo-grid__item photo-grid__item_kondratiev"></div>
+        <div class="photo-grid__item photo-grid__item_kamchatka-1"></div>
+        <div class="photo-grid__item photo-grid__item_kamchatka-2"></div>
+        <div class="photo-grid__item photo-grid__item_baikal-2"></div>
+        <div class="photo-grid__item photo-grid__item_ergaki"></div>
+      </section>
     </div>
   </body>
 </html>
