--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
           <h2 class="places__title">Кольский</h2>
           <div class="places__website">
             <h3 class="places__url-heading">URL</h3>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="places__link">National Geographic</a>
+            <a
+              href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+              class="places__link"
+              >National Geographic</a
+            >
           </div>
           <img
             src="./images/place-kolsky.jpg"
@@ -120,8 +124,8 @@
           <div class="places__paragraphs">
             <p class="places__paragraph">
               Почти весь полуостров находится за Полярным кругом. Саамская
-              тундра, от которой на юг — тайга, а на север —&nbsp;Ледовитый океан,
-              прикидывающийся Баренцевым морем.
+              тундра, от которой на юг — тайга, а на север —&nbsp;Ледовитый
+              океан, прикидывающийся Баренцевым морем.
             </p>
             <p class="places__paragraph">
               Возможно, вы смотрели Звягинцева и даже слышали историю
@@ -139,7 +143,11 @@
           <h2 class="places__title">Алтай</h2>
           <div class="places__website">
             <h3 class="places__url-heading">URL</h3>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="places__link">Facebook</a>
+            <a
+              href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+              class="places__link"
+              >Facebook</a
+            >
           </div>
           <img
             src="./images/place-altai.jpg"
@@ -148,8 +156,8 @@
           />
           <div class="places__paragraphs">
             <p class="places__paragraph">
-              Алтай — одно из красивейших мест в России. В&nbsp;первую очередь из-за
-              гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
+              Алтай — одно из красивейших мест в России. В&nbsp;первую очередь
+              из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
               соснами, горные реки и озёра. А если вы откроете в автомобиле
               окна, сможете познакомиться с невидимым чудом здешних мест —
               горным воздухом.
@@ -167,7 +175,9 @@
           <h2 class="places__title">Зимний Байкал</h2>
           <div class="places__website">
             <h3 class="places__url-heading">URL</h3>
-            <a href="https://vk.com/baikalmile" class="places__link">https://vk.com/baikalmile</a>
+            <a href="https://vk.com/baikalmile" class="places__link"
+              >https://vk.com/baikalmile</a
+            >
           </div>
           <img
             src="./images/place-winter-baikal.jpg"
@@ -183,9 +193,10 @@
             <p class="places__paragraph">
               Конечно, это всё так. Но Байкал ещё идеальное место
               для соревнований по скийорингу. Это такой вид спорта, когда лыжник
-              привязывает себя к&nbsp;мотоциклу, и тандем старается развить как можно
-              бóльшую скорость на льду. В&nbsp;марте 2019 года на фестивале
-              «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+              привязывает себя к&nbsp;мотоциклу, и тандем старается развить как
+              можно бóльшую скорость на льду. В&nbsp;марте 2019 года на
+              фестивале «Байкальская миля» был поставлен мировой рекорд —
+              197.011 км/ч.
             </p>
           </div>
         </div>
@@ -194,7 +205,9 @@
           <h2 class="places__title">Карелия</h2>
           <div class="places__website">
             <h3 class="places__url-heading">URL</h3>
-            <a href="http://vodlozero.ru" class="places__link">http://vodlozero.ru/</a>
+            <a href="http://vodlozero.ru" class="places__link"
+              >http://vodlozero.ru/</a
+            >
           </div>
           <img
             src="./images/place-karelia.jpg"
@@ -208,12 +221,24 @@
               вымахивает на 30 метров — леса карельских национальных парков
               из-за непроходимых болот никогда не знали топора. Некоторым соснам
               уже больше чем полтысячелетия. Прикоснитесь к живому существу,
-              видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на сотню километров не встретишь тропы. А на
-              редких тропинках деревья в&nbsp;паре метров от земли помечены
+              видевшему солнце раньше, чем увидал его Иван Грозный.
+              В&nbsp;девственном лесу на сотню километров не встретишь тропы. А
+              на редких тропинках деревья в&nbsp;паре метров от земли помечены
               медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
         </div>
+      </section>
+      <section class="cover">
+        <div class="cover__text">
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">
+            По мотивам учебной темы о Транссибе — путешествие от столицы до
+            Байкала на&nbsp;электричках.
+          </p>
+        </div>
+        <div class="cover__overlay"></div>
+        <div class="cover__bacground"></div>
       </section>
     </div>
   </body>
