--- a/index.html
+++ b/index.html
@@ -242,11 +242,25 @@
       </section>
       <footer class="footer">
         <ul class="footer__menu">
-          <li class="footer__menu-item"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-          <li class="footer__menu-item"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-          <li class="footer__menu-item"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-          <li class="footer__menu-item"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-          <li class="footer__menu-item"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+          <li class="footer__menu-item">
+            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__link" href="https://calendar.yandex.ru"
+              >Календарь</a
+            >
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__link" href="https://travel.yandex.ru"
+              >Путешествия</a
+            >
+          </li>
         </ul>
         <p class="footer__copyright">© 2022. Andrew Stepanov</p>
       </footer>
