--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
       <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
         <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
-          36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома,
-          не видели? На самом деле, Россия — это целая вселенная с ласковым
+          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только
+          36% планируют провести отпуск в родной стране. Мол, чего мы&nbsp;тут, дома,
+          не видели? На самом деле, Россия — это целая вселенная&nbsp;с&nbsp;ласковым
           морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
-          увидеть все эти красоты можно без миллионов на счету, загранпаспорта и
+          увидеть&nbsp;все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и
           многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
-          мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и
-          проехала 20 тысяч километров по родной стране. Мы выбрали и описали
-          некоторые интересные места, достойные вашего отпуска.
+          мама,&nbsp;которая взяла в охапку троих детей, усадила их в свою «Ладу»
+          и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали
+          некоторые интересные места,&nbsp;достойные вашего отпуска.
         </p>
         <ul class="intro__list">
           <li><span class="intro__list_bold">Часовых поясов</span> 11</li>
@@ -93,14 +93,13 @@
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
               подёрнутого рябью волн Балтийского моря с другой. Уникальная
-              природная зона на краю российского анклава.
+              природная зона на&nbsp;краю российского анклава.
             </p>
             <p class="places__paragraph">
-              На этом Калининградская область не заканчивается. Для
-              путешественника и исследователя там же по соседству — самая
-              западная точка России, Балтийская коса, — и немецкое наследие
+              На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там же по&nbsp;соседству — самая
+              западная точка России, Балтийская коса,&nbsp;— и&nbsp;немецкое наследие
               россыпи небольших приморских городов. Атмосфера здешних мест
-              исключает суету, окуная в спокойствие природы и запах стального,
+              исключает суету, окуная в&nbsp;спокойствие природы и запах стального,
               прохладного моря.
             </p>
           </div>
@@ -124,11 +123,11 @@
           <div class="places__paragraphs">
             <p class="places__paragraph">
               Почти весь полуостров находится за Полярным кругом. Саамская
-              тундра, от которой на юг — тайга, а на север —&nbsp;Ледовитый
+              тундра, от которой на юг — тайга, а&nbsp;на север —&nbsp;Ледовитый
               океан, прикидывающийся Баренцевым морем.
             </p>
             <p class="places__paragraph">
-              Возможно, вы смотрели Звягинцева и даже слышали историю
+              Возможно, вы смотрели Звягинцева&nbsp; и даже слышали историю
               арктического фестиваля в Териберке. Возможно, слово «Хибины» не
               осталось под снегом школьных воспоминаний об уроках географии.
               Возможно, вы не интересовались пронизывающей земную кору
@@ -158,15 +157,15 @@
             <p class="places__paragraph">
               Алтай — одно из красивейших мест в России. В&nbsp;первую очередь
               из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
-              соснами, горные реки и озёра. А если вы откроете в автомобиле
+              соснами, горные реки и озёра. А&nbsp;если вы откроете в автомобиле
               окна, сможете познакомиться с невидимым чудом здешних мест —
               горным воздухом.
             </p>
             <p class="places__paragraph">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
               Так вы увидите всё разнообразие местной флоры и фауны. По лесам
-              Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся
-              косули. И знаменитые манулы — тоже обитатели Алтайского края.
+              Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах пасутся
+              косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.
             </p>
           </div>
         </div>
@@ -187,13 +186,12 @@
           <div class="places__paragraphs">
             <p class="places__paragraph">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
-              знают, что это самый большой источник пресной воды и одно из
-              красивейших мест в России.
+              знают, что это самый большой источник пресной воды и&nbsp;одно из
+              красивейших мест в&nbsp;России.
             </p>
             <p class="places__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное место
-              для соревнований по скийорингу. Это такой вид спорта, когда лыжник
-              привязывает себя к&nbsp;мотоциклу, и тандем старается развить как
+              Конечно, это всё так. Но Байкал ещё идеальное место&nbsp;для соревнований по скийорингу. Это такой вид спорта, когда лыжник
+              привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как
               можно бóльшую скорость на льду. В&nbsp;марте 2019 года на
               фестивале «Байкальская миля» был поставлен мировой рекорд —
               197.011 км/ч.
@@ -220,7 +218,7 @@
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
               вымахивает на 30 метров — леса карельских национальных парков
               из-за непроходимых болот никогда не знали топора. Некоторым соснам
-              уже больше чем полтысячелетия. Прикоснитесь к живому существу,
+              уже больше чем&nbsp;полтысячелетия. Прикоснитесь к живому существу,
               видевшему солнце раньше, чем увидал его Иван Грозный.
               В&nbsp;девственном лесу на сотню километров не встретишь тропы. А
               на редких тропинках деревья в&nbsp;паре метров от земли помечены
@@ -233,7 +231,7 @@
         <div class="cover__text">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">
-            По мотивам учебной темы о Транссибе — путешествие от столицы до
+            По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие от&nbsp;столицы&nbsp;до
             Байкала на&nbsp;электричках.
           </p>
         </div>
