--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
       <section class="intro">
         <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
         <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только
-          36% планируют провести отпуск в родной стране. Мол, чего мы&nbsp;тут, дома,
-          не видели? На самом деле, Россия — это целая вселенная&nbsp;с&nbsp;ласковым
-          морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
-          увидеть&nbsp;все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и
-          многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
-          мама,&nbsp;которая взяла в охапку троих детей, усадила их в свою «Ладу»
-          и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали
-          некоторые интересные места,&nbsp;достойные вашего отпуска.
+          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
+          но&nbsp;только 36% планируют провести отпуск в родной стране. Мол,
+          чего мы&nbsp;тут, дома, не видели? На самом деле, Россия — это целая
+          вселенная&nbsp;с&nbsp;ласковым морем юга, густыми лесами Саян и
+          суровыми льдами плато Путорана. А ещё увидеть&nbsp;все эти красоты
+          можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых
+          перелетов. Как, например, Вера Башмакова — смелая молодая
+          мама,&nbsp;которая взяла в охапку троих детей, усадила их в свою
+          «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы
+          выбрали и&nbsp;описали некоторые интересные места,&nbsp;достойные
+          вашего отпуска.
         </p>
         <ul class="intro__list">
           <li><span class="intro__list_bold">Часовых поясов</span> 11</li>
@@ -96,11 +98,12 @@
               природная зона на&nbsp;краю российского анклава.
             </p>
             <p class="places__paragraph">
-              На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там же по&nbsp;соседству — самая
-              западная точка России, Балтийская коса,&nbsp;— и&nbsp;немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест
-              исключает суету, окуная в&nbsp;спокойствие природы и запах стального,
-              прохладного моря.
+              На этом Калининградская область не заканчивается.
+              Для&nbsp;путешественника и&nbsp;исследователя там же
+              по&nbsp;соседству — самая западная точка России, Балтийская
+              коса,&nbsp;— и&nbsp;немецкое наследие россыпи небольших приморских
+              городов. Атмосфера здешних мест исключает суету, окуная
+              в&nbsp;спокойствие природы и запах стального, прохладного моря.
             </p>
           </div>
         </div>
@@ -164,8 +167,9 @@
             <p class="places__paragraph">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
               Так вы увидите всё разнообразие местной флоры и фауны. По лесам
-              Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах пасутся
-              косули. И&nbsp;знаменитые манулы — тоже обитатели Алтайского края.
+              Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах
+              пасутся косули. И&nbsp;знаменитые манулы — тоже обитатели
+              Алтайского края.
             </p>
           </div>
         </div>
@@ -190,10 +194,11 @@
               красивейших мест в&nbsp;России.
             </p>
             <p class="places__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное место&nbsp;для соревнований по скийорингу. Это такой вид спорта, когда лыжник
-              привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается развить как
-              можно бóльшую скорость на льду. В&nbsp;марте 2019 года на
-              фестивале «Байкальская миля» был поставлен мировой рекорд —
+              Конечно, это всё так. Но Байкал ещё идеальное место&nbsp;для
+              соревнований по скийорингу. Это такой вид спорта, когда лыжник
+              привязывает себя к&nbsp;мотоциклу,&nbsp;и&nbsp;тандем старается
+              развить как можно бóльшую скорость на льду. В&nbsp;марте 2019 года
+              на фестивале «Байкальская миля» был поставлен мировой рекорд —
               197.011 км/ч.
             </p>
           </div>
@@ -218,8 +223,8 @@
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
               вымахивает на 30 метров — леса карельских национальных парков
               из-за непроходимых болот никогда не знали топора. Некоторым соснам
-              уже больше чем&nbsp;полтысячелетия. Прикоснитесь к живому существу,
-              видевшему солнце раньше, чем увидал его Иван Грозный.
+              уже больше чем&nbsp;полтысячелетия. Прикоснитесь к живому
+              существу, видевшему солнце раньше, чем увидал его Иван Грозный.
               В&nbsp;девственном лесу на сотню километров не встретишь тропы. А
               на редких тропинках деревья в&nbsp;паре метров от земли помечены
               медвежьими когтями. Чтобы все знали, кто тут хозяин.
@@ -231,8 +236,8 @@
         <div class="cover__text">
           <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">
-            По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие от&nbsp;столицы&nbsp;до
-            Байкала на&nbsp;электричках.
+            По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие
+            от&nbsp;столицы&nbsp;до Байкала на&nbsp;электричках.
           </p>
         </div>
         <div class="cover__overlay"></div>
