--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         <img src="./images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
         <img src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo-grid__item">
         <img src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка" class="photo-grid__item">
+        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo-grid__item">
+        <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo-grid__item">
         <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
       </section>
       <section class="places">
