--- a/index.html
+++ b/index.html
@@ -47,32 +47,82 @@
           вашего отпуска.
         </p>
         <ul class="intro__list">
-          <li><span class="intro_bold">Часовых поясов</span> 11</li>
+          <li><span class="intro__bold">Часовых поясов</span> 11</li>
           <li>
-            <span class="intro_bold">Объектов природного наследия ЮНЕСКО</span>
+            <span class="intro__bold">Объектов природного наследия ЮНЕСКО</span>
             12
           </li>
           <li>
-            <span class="intro_bold">Объектов культурного наследия ЮНЕСКО</span>
+            <span class="intro__bold"
+              >Объектов культурного наследия ЮНЕСКО</span
+            >
             16
           </li>
-          <li><span class="intro_bold">Природных заповедников</span> 105</li>
-          <li><span class="intro_bold">Аэропортов</span> 241</li>
+          <li><span class="intro__bold">Природных заповедников</span> 105</li>
+          <li><span class="intro__bold">Аэропортов</span> 241</li>
         </ul>
       </section>
       <section class="photo-grid">
-        <img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
-        <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Атрава Тулси" class="photo-grid__item">
-        <img src="./images/photo-grid-tuman-figma.jpg" alt="" class="photo-grid__item">
-        <img src="./images/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__item">
-        <img src="./images/photo-grid-arisa.jpg" alt="Ариса" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__item">
-        <img src="./images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
-        <img src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка" class="photo-grid__item">
-        <img src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo-grid__item">
-        <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo-grid__item">
-        <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
+        <img
+          src="./images/photo-grid-train.jpg"
+          alt="Поезд"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-atharva-tulsi.jpg"
+          alt="Атрава Тулси"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-tuman-figma.jpg"
+          alt=""
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-sochi.jpg"
+          alt="Сочи"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-arisa.jpg"
+          alt="Ариса"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-baikal.jpg"
+          alt="Байкал"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-elbrus.jpg"
+          alt="Эльбрус"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-kondratiev.jpg"
+          alt="Кондратьев"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-kamchatka-1.jpg"
+          alt="Камчатка"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-kamchatka-2.jpg"
+          alt="Камчатка-2"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-baikal-2.jpg"
+          alt="Байкал-2"
+          class="photo-grid__item"
+        />
+        <img
+          src="./images/photo-grid-ergaki.jpg"
+          alt="Ергаки"
+          class="photo-grid__item"
+        />
       </section>
       <section class="places">
         <div class="places__place">
@@ -225,20 +275,16 @@
         </div>
       </section>
       <section class="cover">
-        <h2 class="cover__title">
-          <a
-            href="https://stampsy.com/na-elektrichkakh-do-baikala"
-            class="cover__link"
-            target="_blank"
-            >До Байкала «на&nbsp;собаках»</a
-          >
-        </h2>
-        <p class="cover__subtitle">
-          По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие
-          от&nbsp;столицы&nbsp;до Байкала на&nbsp;электричках.
-        </p>
-        <div class="cover__overlay"></div>
-        <div class="cover__bacground"></div>
+        <a
+          href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          class="cover__link"
+          target="_blank"
+          ><h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">
+            По мотивам учебной темы о&nbsp;Транссибе&nbsp;—&nbsp;путешествие
+            от&nbsp;столицы&nbsp;до Байкала на&nbsp;электричках.
+          </p>
+        </a>
       </section>
     </main>
     <footer class="footer">
